examples/test/testpolicy10826.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10826
  namespace: namespace29
spec:
  podSelector:
    matchLabels:
      key41: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value40
      podSelector:
        matchLabels:
          key11: value2
          key1: value19
          key14: value35
